Fixes #64, A summary of attendees and a progress bar is visible on the event page.

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -83,3 +83,7 @@
 .error_notification {
   color: #000 !important;
 }
+
+.very-large-font {
+  font-size: 50px;
+}
